Fix h3 header top margin and hike status-list left alignment (actually save file this time)

--- a/wp/davidhikesalot.css
+++ b/wp/davidhikesalot.css
@@ -5,14 +5,9 @@
 */
 
 /** WP Natural Lite Theme Overrides */
-a, a:link, a:visited {
-  color: black;
-  text-decoration: none;
-}
-a:hover {
-  color: black;
-  text-decoration: underline;
-}
+h3 { margin-top: 20px; }
+a, a:link, a:visited { color: black; text-decoration: none; }
+a:hover { color: black; text-decoration: underline; }
 
 /** Global overrides */
 ul { margin-bottom: 10px; }
